<resources>
    <string name="app_name">Application</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="Oper">Операции</string>
    <string name="bills">Счета</string>
    <string name="analisis">Аналитика</string>
    <string name="more">Еще</string>
    <string name="balance">Общий баланс</string>
    <string name="itogi">Итоги за месяц</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="Gift">Подарки</string>

    <string-array name="chs_categ">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
    </string-array>
</resources>