<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/_66_1"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="-46dp"
        tools:layout_editor_absoluteY="-16dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="220dp"
        android:layout_height="165dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="22dp"
        android:text="@string/login"
        android:textSize="27sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/logintable"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logintable"
        android:layout_width="322dp"
        android:layout_height="128dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587"
        app:srcCompat="@drawable/rectangle_23__1_"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_toop"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="#00FFFFFF"
        android:textColor="#00FFFFFF"
        app:iconTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/logintable"
        app:layout_constraintTop_toTopOf="@+id/logintable"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton15"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/register"
        android:onClick="btnRegister"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintable"
        app:srcCompat="@drawable/rectangle_24"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>