<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/_66_1"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="220dp"
        android:layout_height="165dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="22dp"
        android:text="@string/register"
        android:textSize="27sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/logintable"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logintable"
        android:layout_width="300dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637"
        app:srcCompat="@drawable/rectangle_26"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/email_reg"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/username"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_reg"
        android:autofillHints="" />

    <EditText
        android:id="@+id/PASSword"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_toop"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:background="#00FFFFFF"
        android:onClick="btnOperations"
        android:textColor="#00FFFFFF"
        app:iconTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/logintable"
        app:layout_constraintTop_toTopOf="@+id/logintable"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton16"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintable"
        app:srcCompat="@drawable/rectangle_25"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>