<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="40dp"
        android:text="0₽"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="70dp"
        android:text="Баланс"
        android:textColor="#6E6E6E"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="140dp"
        android:text="Карты и счета"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        tools:layout_editor_absoluteX="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/popolnenie"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_marginStart="17dp"
                    android:layout_marginEnd="35dp"
                    android:background="#00FFFFFF"
                    app:srcCompat="@drawable/icons8___100_1__1_"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="25dp"
                    android:background="#00FFFFFF"
                    app:srcCompat="@drawable/icons8____100_1"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="25dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    app:srcCompat="@drawable/icons8____64_1"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    app:srcCompat="@drawable/icons8___100_2"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Oper"
                    android:textAlignment="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bills"
                    android:textAlignment="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/analisis"
                    android:textAlignment="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/more"
                    android:textAlignment="center"
                    android:textColor="#000000" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>