<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Analytics">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_66_1" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons8___90_1" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        tools:layout_editor_absoluteX="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/popolnenie"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="35dp"
                    android:background="#00FFFFFF"
                    android:onClick="Operations"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/icons8___100_1"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="25dp"
                    android:background="#00FFFFFF"
                    android:onClick="Scores"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/symka_podsvet"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="25dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/poct_podsvet"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:onClick="More"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/more"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Oper"
                    android:textAlignment="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bills"
                    android:textAlignment="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/analisis"
                    android:textAlignment="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/more"
                    android:textAlignment="center"
                    android:textColor="#000000" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginTop="200dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle_60" />

</androidx.constraintlayout.widget.ConstraintLayout>