<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardView.Dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:backgroundTint="#00FFFFFF"
    tools:context=".More">

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/_66_1"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="24dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="Ivan2004"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:text="Ivan2004@mail.ru"
                android:textColor="#000000"
                android:textSize="20sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:text="Сменнить аккаунт"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/imageButton9"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="160dp"
                    android:layout_marginTop="7dp"
                    android:backgroundTint="#00FFFFFF"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/icons8__150_1"
                    tools:ignore="SpeakableTextPresentCheck" />
            </FrameLayout>

            <ImageButton
                android:id="@+id/imageButton12"
                android:layout_width="300dp"
                android:layout_height="90dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/idsovmest"
                tools:ignore="SpeakableTextPresentCheck" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageButton13"
                    android:layout_width="wrap_content"
                    android:layout_height="500dp"
                    android:background="#00FFFFFF"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/morevse"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/invis_btn"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:background="#00FFFFFF"
                    android:onClick="AddCategory"
                    app:srcCompat="@drawable/empty" />

                <ImageButton
                    android:id="@+id/invis_btn6"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:layout_marginTop="328dp"
                    android:background="#00FFFFFF"
                    android:onClick="Options"
                    app:srcCompat="@drawable/empty" />

                <ImageButton
                    android:id="@+id/invis_btn1"
                    android:layout_width="match_parent"
                    android:layout_height="83dp"
                    android:layout_marginTop="82dp"
                    android:background="#9A9F9F9F"
                    app:srcCompat="@drawable/empty" />

                <ImageButton
                    android:id="@+id/invis_btn2"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:layout_marginTop="164dp"
                    android:background="#9A9F9F9F"
                    app:srcCompat="@drawable/empty" />

                <ImageButton
                    android:id="@+id/invis_btn3"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:layout_marginTop="246dp"
                    android:background="#9A9F9F9F"
                    app:srcCompat="@drawable/empty" />

            </FrameLayout>

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView21"
        tools:layout_editor_absoluteX="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/popolnenie"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="35dp"
                    android:background="#00FFFFFF"
                    android:onClick="Operations"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/icons8___100_1"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="25dp"
                    android:background="#00FFFFFF"
                    android:onClick="Scores"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/symka"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="25dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:onClick="Analitics"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/icons8____64_1"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/more_podsvet"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Oper"
                    android:textAlignment="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bills"
                    android:textAlignment="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/analisis"
                    android:textAlignment="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/more"
                    android:textAlignment="center"
                    android:textColor="#000000" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>